Fixed alignment problems. Finished confirmation message. Finished and working project. Going to mess with color selections a bit more.

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.wrapper, form, .contactInfo {
+.wrapper, form, #afterSuccessContents, .contactInfo {
   margin-left: auto;
   margin-right: auto; }
 
@@ -21,6 +21,7 @@ header {
 header h1 {
   color: #EEE;
   text-transform: uppercase;
+  font-size: 25px;
   margin: 0;
   padding: 22px 20px; }
 
@@ -33,15 +34,40 @@ header h1 {
   padding: 0; }
   .wrapper h1 {
     text-transform: uppercase;
+    font-size: 20px;
     margin: 0;
     padding: 30px 0; }
 
 form {
   margin-bottom: 3em;
-  max-width: 500px;
+  max-width: 100%;
   max-height: 900px;
   background: #F7F7F7;
   padding: 2em; }
+
+#formAfterSuccess {
+  display: none; }
+
+#afterSuccessContents {
+  text-align: center;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  margin-bottom: 3em;
+  max-width: 100%;
+  height: 450px;
+  background: #F7F7F7;
+  padding: 2em; }
+  #afterSuccessContents img {
+    display: block; }
+  #afterSuccessContents p {
+    clear: both;
+    display: block; }
 
 .control-group {
   margin-bottom: 1em; }
@@ -67,24 +93,6 @@ form {
   width: 100%;
   height: 30px; }
 
-/* This is our style for the invalid fields */
-input:valid {
-  border-color: #2ecc71;
-  background-color: #dff0d8; }
-
-input:focus:valid {
-  outline: none; }
-
-/* This is our style for the invalid fields
-input:invalid{
-  border-color: $error-accent-border;
-  background-color: $error-accent;
-}
-
-input:focus:invalid {
-  outline: none;
-}
-*/
 button {
   display: block;
   border: none;
@@ -96,14 +104,19 @@ button {
   border-radius: .25em; }
 
 .contactInfo {
-  background: #4990E2;
-  max-width: 450px;
-  padding: 1em;
-  margin-bottom: 30px; }
-  .contactInfo p {
-    color: #EEE; }
-    .contactInfo p span {
-      margin-right: 10px; }
+  width: 100%; }
+  .contactInfo .asideContents {
+    background: #4990E2;
+    padding: 1em;
+    margin-bottom: 30px; }
+    .contactInfo .asideContents p {
+      color: #EEE; }
+      .contactInfo .asideContents p span {
+        margin-right: 10px; }
+
+.contactInfo p > span {
+  display: inline-block;
+  vertical-align: middle; }
 
 .error {
   color: red;
@@ -121,22 +134,53 @@ footer {
     margin: 0;
     padding: 10px 0; }
 
+/* This is our style for the valid fields */
+input:valid {
+  border-color: #2ecc71;
+  background-color: #dff0d8; }
+
+input:focus:valid {
+  outline: none; }
+
+/* This is our style for the invalid fields
+input:invalid{
+  border-color: $error-accent-border;
+  background-color: $error-accent;
+}
+
+input:focus:invalid {
+  outline: none;
+}
+*/
 /* Larger Phones, Small Tablets */
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
   form {
     display: block;
-    min-width: 50%;
+    float: left;
+    width: 50%;
     margin-right: 20px;
-    float: left; }
-  aside {
+    margin-bottom: 15%; }
+  #afterSuccessContents {
+    float: left;
+    width: 50%;
+    margin-right: 20px;
+    margin-bottom: 15%; }
+  .contactInfo {
     display: block;
+    float: right;
     width: 40%;
-    float: right; } }
+    margin-top: -90px; } }
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width: 1200px) {
+  header h1 {
+    font-size: 35px; }
+  .wrapper h1 {
+    font-size: 25px; }
   form {
-    min-width: 50%; }
-  aside {
-    min-width: 40%; } }
+    margin-bottom: 10%; }
+  #afterSuccessContents {
+    margin-bottom: 10%; }
+  .contactInfo {
+    margin-top: -100px; } }
